<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/eco_green"
        android:onClick="onCLickLoginUser"
        android:text="@string/login_intent"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/password_outline"
        app:layout_constraintStart_toStartOf="@+id/password_outline"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/hello_again"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/eco_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_carbon_email" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/email_address"
            android:minHeight="48dp"
            android:textColorHighlight="@color/kwf_gold"
            android:textColorLink="@color/kwf_gold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_outline">

        <ImageView
            android:id="@+id/ic_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bxs_lock" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_password"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/forgot_password"
        android:textColor="@color/eco_green"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/password_outline"
        app:layout_constraintTop_toBottomOf="@+id/password_outline"
        android:onClick="OnClickForgotPassword"/>

    <ImageView
        android:id="@+id/geo_snap_logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/geo_snap_logo" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/sign_up"
        android:textColor="@color/eco_green"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/no_account"
        app:layout_constraintTop_toTopOf="@+id/no_account"
        android:onClick="onClickSignUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>