<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/eco_green"
        android:text="@string/sign_up_intent"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_outline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_outline"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_outline" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--enter full name text box-->
    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/eco_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <ImageView
            android:id="@+id/ic_user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bx_user" />

        <EditText
            android:id="@+id/enter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:textColorHighlight="@color/kwf_gold"
            android:textColorLink="@color/kwf_gold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_user"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--enter email address text box-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_outline"
        app:layout_constraintTop_toBottomOf="@+id/name_outline">

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_carbon_email" />

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/email_address"
            android:minHeight="48dp"
            android:textColorHighlight="@color/kwf_gold"
            android:textColorLink="@color/kwf_gold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--enter password text box-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_outline"
        app:layout_constraintTop_toBottomOf="@+id/email_outline">

        <ImageView
            android:id="@+id/ic_password1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bxs_lock" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_password1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--enter password confirmation text box-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_password_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_outline"
        app:layout_constraintTop_toBottomOf="@+id/password_outline">

        <ImageView
            android:id="@+id/ic_password2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bxs_lock" />

        <EditText
            android:id="@+id/enter_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_password2"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/yes_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato"
        android:text="@string/yes_account"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/lato"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textColor="@color/eco_green"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/yes_account"
        app:layout_constraintStart_toEndOf="@+id/yes_account"
        app:layout_constraintTop_toTopOf="@+id/yes_account" />

</androidx.constraintlayout.widget.ConstraintLayout>