<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".auth.user.ForgetPasswordActivity">

    <TextView
        android:id="@+id/recover_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/lato"
        android:text="@string/recover_password"
        android:textColor="@color/eco_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ForgetPassBack"
        app:layout_constraintTop_toBottomOf="@+id/ForgetPassBack" />

    <ImageButton
        android:id="@+id/ForgetPassBack"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mapbox_ic_clear"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_outline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/border_textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover_password">

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_carbon_email" />

        <EditText
            android:id="@+id/EmailRecoveryInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:fontFamily="@font/lato"
            android:hint="@string/email_address"
            android:minHeight="48dp"
            android:textColorHighlight="@color/kwf_gold"
            android:textColorLink="@color/kwf_gold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/RecoverySubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/eco_green"
        android:onClick="onClickSubmit"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_outline"
        app:layout_constraintStart_toStartOf="@+id/email_outline"
        app:layout_constraintTop_toBottomOf="@+id/email_outline" />

</androidx.constraintlayout.widget.ConstraintLayout>